trying to fix a layout bug

--- a/src/layouts/PageLayout.module.css
+++ b/src/layouts/PageLayout.module.css
@@ -1,8 +1,7 @@
 .pageCenter {
-  background-color: light-dark(var(--mantine-color-blue-1), var(--mantine-color-indigo-1));
-  /* min-height: 100vh; */
 }
 
-.pageBox {
+.pageContainer {
   background-color: light-dark(var(--mantine-color-blue-1), var(--mantine-color-indigo-1));
+  min-width: 100%;
 }
